<resources>
    <string name="app_name">patterns</string>

    <string name="do_login">로그인하기</string>
    <string name="id_edit_text_hint">아이디를 입력하세요</string>
    <string name="id_password_text_hint">패스워드를 입력하세요</string>

    <string name="select_lesson">학습하고자 하는 레슨을 선택해주세요.</string>
    <string name="no_lesson_selected">학습하고자 하는 레슨을 선택해주세요.</string>
    <string name="lesson_selected_format">%1$d 레슨이 선택되었습니다.</string>
    <string name="which_mode_do_you_want_study">어떤 모드로 학습을 진행하시겠습니까?</string>
    <string name="lesson_mode_basic">기본학습</string>
    <string name="lesson_mode_test">시험모드</string>
    <string name="lesson_not_completed">학습</string>
    <string name="lesson_completed">학습</string>
    <string name="lesson_name_format">%1$d 레슨 - %2$s</string>

    <string name="lesson_title_format">%1$d 레슨 - %2$s %3$s 중입니다.</string>
    <string name="check_answer">정답확인</string>
    <string name="enter_answer_hint">정답입력</string>
    <string name="next_problem">다음문제</string>
    <string name="lesson_complete">학습완료</string>
    <string name="test_complete">테스트완료</string>
    <string name="test_end_by_time_expired">테스트종료</string>
    <string name="time_expired">시간만료</string>
    <string name="time_remain">남음</string>
    <string name="test_time_format">%1$d:%1$d</string> <!-- ex) 00:00 -->

    <string name="lesson_title_format_default">레슨</string>
    <string name="lesson_type_basic">기본</string>
    <string name="lesson_type_test">테스트</string>




</resources>
