<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LessonSelectionActivity">

    <ImageView
        android:id="@+id/top_header_background"
        android:layout_width="match_parent"
        android:layout_height="148dp"
        android:background="@color/_FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/lesson_content_background"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/_EAEAEA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_header_background" />

    <TextView
        android:id="@+id/lesson_selection_description"
        style="@style/LargeSizeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="40dp"
        android:text="@string/select_lesson"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="@style/NormalSizeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:text="@string/no_lesson_selected"
        android:textColor="@color/_9C9C9C"
        app:layout_constraintStart_toStartOf="@id/lesson_selection_description"
        app:layout_constraintTop_toBottomOf="@id/lesson_selection_description" />

    <Button
        android:id="@+id/basic_lesson"
        style="@style/BasicLessonButton"
        android:layout_width="154dp"
        android:layout_height="67dp"
        android:layout_marginEnd="20dp"
        android:text="@string/lesson_mode_basic"
        app:layout_constraintEnd_toStartOf="@+id/test_lesson"
        app:layout_constraintTop_toTopOf="@id/lesson_selection_description" />

    <Button
        android:id="@+id/test_lesson"
        style="@style/TestLessonButton"
        android:layout_width="154dp"
        android:layout_height="67dp"
        android:layout_marginEnd="40dp"
        android:text="@string/lesson_mode_test"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/basic_lesson" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/lesson_selection_recycler_view"
        android:layout_width="732dp"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_header_background"
        tools:listitem="@layout/view_for_single_lesson" />

</android.support.constraint.ConstraintLayout>