<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/problem_solving"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context=".activity.ProblemSolvingActivity">

    <TextView
        android:id="@+id/lesson_title"
        style="@style/LargeSizeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/lesson_title_format_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/problem_solving_progress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:max="3"
        android:progress="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lesson_title" />

    <TextView
        android:id="@+id/problem_number_box"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="40dp"
        android:background="@color/_27B6F6"
        android:gravity="center"
        android:text="1"
        android:textColor="@color/_FFFFFF"
        android:textSize="60dp"
        app:layout_constraintStart_toStartOf="@id/problem_solving_progress"
        app:layout_constraintTop_toBottomOf="@id/problem_solving_progress" />

    <TextView
        android:id="@+id/remaining_time"
        style="@style/NormalSizeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="00:00"
        android:textColor="@color/_27B6F6"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/problem_number_box"
        app:layout_constraintStart_toStartOf="@id/problem_number_box"
        app:layout_constraintTop_toBottomOf="@id/problem_number_box" />

    <TextView
        android:id="@+id/time_remaining_state"
        style="@style/NormalSizeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_remain"
        android:textColor="@color/_27B6F6"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/remaining_time"
        app:layout_constraintStart_toStartOf="@id/remaining_time"
        app:layout_constraintTop_toBottomOf="@id/remaining_time" />

    <TextView
        android:id="@+id/problem_content"
        style="@style/NormalSizeTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:paddingBottom="40dp"
        app:layout_constraintEnd_toEndOf="@id/problem_solving_progress"
        app:layout_constraintStart_toEndOf="@id/problem_number_box"
        app:layout_constraintTop_toTopOf="@id/problem_number_box"
        tools:text="다음 덧셈을 계산하시오.\n\n3 + 1 = ?" />

    <EditText
        android:id="@+id/answer_input"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:background="@color/_EAEAEA"
        android:gravity="center"
        android:hint="@string/enter_answer_hint"
        android:inputType="number"
        android:maxLines="1"
        android:enabled="false"
        android:imeOptions="actionDone"
        app:layout_constraintEnd_toEndOf="@id/problem_solving_progress"
        app:layout_constraintTop_toBottomOf="@id/problem_content" />

    <Button
        android:id="@+id/check_answer"
        style="@style/DisabledButton"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:text="@string/check_answer"
        android:textSize="20dp"
        android:enabled="false"
        app:layout_constraintEnd_toEndOf="@id/problem_solving_progress"
        app:layout_constraintTop_toBottomOf="@id/answer_input" />

    <ImageView
        android:id="@+id/symbol_problem_answer_result"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/problem_correct"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@id/answer_input"
        app:layout_constraintStart_toStartOf="@id/answer_input"
        app:layout_constraintTop_toBottomOf="@id/check_answer"
        app:layout_goneMarginTop="24dp" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/problem_solving_result_tag_recycler_view"
        style="@style/NormalSizeTextView"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:listitem="@layout/view_problem_solving_result_tag" />

    <Button
        android:id="@+id/proceed_next"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginBottom="40dp"
        android:layout_marginEnd="40dp"
        android:background="@color/_D5A638"
        android:text="@string/next_problem"
        android:textColor="@color/_FFFFFF"
        android:textSize="20dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>